sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:17: error: 'while' expected but '}' found.
} 
^