sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var len = getNombreValeurs()
  var ecart:Double = getNombreValeurs()
  var inversion = false
  var i = 0
  do {
    if (ecart>1)
    	ecart = (ecart.toDouble / 1.3).toInt
    i = 0
    while (i+ecart<len) {
      if (plusPetit(i+ecart,i))
      	echange(i,i+ecart)
      i+=1
    }
  }  
}